// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`skeleton [snapshot] > shape: box 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-box"
/>
`;

exports[`skeleton [snapshot] > shape: box with children 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-box"
>
  <span>
    Loading content
  </span>
</div>
`;

exports[`skeleton [snapshot] > shape: box with size 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-box"
  style="width: 100px; height: 100px;"
/>
`;

exports[`skeleton [snapshot] > shape: box with width and height 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-box"
  style="width: 200px; height: 50px;"
/>
`;

exports[`skeleton [snapshot] > shape: circle 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-circle"
/>
`;

exports[`skeleton [snapshot] > shape: circle with children 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-circle"
>
  <span>
    Loading content
  </span>
</div>
`;

exports[`skeleton [snapshot] > shape: circle with size 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-circle"
  style="width: 100px; height: 100px;"
/>
`;

exports[`skeleton [snapshot] > shape: circle with width and height 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-circle"
  style="width: 200px; height: 50px;"
/>
`;

exports[`skeleton [snapshot] > shape: pill 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-pill"
/>
`;

exports[`skeleton [snapshot] > shape: pill with children 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-pill"
>
  <span>
    Loading content
  </span>
</div>
`;

exports[`skeleton [snapshot] > shape: pill with size 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-pill"
  style="width: 100px; height: 100px;"
/>
`;

exports[`skeleton [snapshot] > shape: pill with width and height 1`] = `
<div
  class="vesper-skeleton vesper-skeleton-pill"
  style="width: 200px; height: 50px;"
/>
`;
